# DEDS_Portfolio_Week-10

./: Dummies.txt  Model.txt  README.md  commentless.cs  model.py  modelnotebook.html  modelnotebook.ipynb  pyproject.toml
C# Neural Network/: C# Neural Network.sln
C# Neural Network/C# Neural Network/: C# Neural Network.csproj  Program.cs
