[tool.poetry]
name = "deds-portfolio-week-10"
version = "1.0"
description = "DEDS_portfolio van Pjotr en Sennen van Week 10."
authors = ["Peter-The-Great <PjotrW15@Gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
notebook = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
